<resources>
	<string name="app_name">AppCongreso</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">III Congreso Nacional de Ingeniería 2021</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>

	<string name="menu_event">Ponencias</string>
	<string name="fragment_lecture_detail">Detalles de la ponencia</string>
	<string name="fragment_speaker_detail">Información del ponente</string>

	<string name="imgponente">imgPonente</string>
	<string name="nombrePonente">TextView</string>
	<string name="descPonente">descPonente</string>
	<string name="descPonencia">descPonencia</string>
	<string name="nombrePonencia">nombrePonencia</string>
	<string name="datePonencia">datePonencia</string>

	<string name="hello_blank_fragment">Hello blank fragment</string>

	<string name="menu_resources">Recursos</string>

	<string name="advertisements">IV Congreso Internacional de Ingeniería</string>
	<string name="event_info">La cuarta edición del Congreso Internacional de Ingeniería – Industria 4.0 reunirá a especialistas de países como Chile, Colombia, Puerto Rico, Alemania, México y Perú.</string>
	<string name="logo_desc">Descripción del logo</string>
	<string name="action_login">Iniciar sesión</string>
	<string name="menu_home">Página principal</string>
	<string name="menu_main_page">Página principal</string>
	<string name="login_message">Accede a tu cuenta para descargar materiales y calificar las ponencias.</string>
	<string name="login_title">¡Te damos la bienvenida!</string>
	<string name="cancel_button">Cancelar</string>
	<string name="redirect_button">Iniciar sesión</string>
	<string name="enroll">Reservar puesto</string>
	<string name="promoter">Universidad Continental 2021</string>

	<string name="download_resources">Descargar Materiales</string>
	<string name="resources">resources</string>
	<string name="speaker">PONENTE</string>
	<string name="lecture">lecture</string>
	<string name="calendar">calendar</string>
	<string name="lecture_date_time">Fecha: %s</string>
	<string name="lecture_time">Hora: %s</string>
	<string name="lecture_url">Enlace: %s</string>
	<string name="speaker_name">%s %s %s</string>
	<string name="map">Ver ubicación</string>
	<string name="info_uc">Información sobre la Universidad Continental</string>
	<string name="uc">Universidad Continental</string>
	<string name="detail_info_uc">El campus Huancayo de la Universidad Continental se encuentra ubicada en la Avenida San Carlos 1980, Huancayo 12000.</string>
	<string name="share_location_uc">Hola, la ubicación de la Universidad Continental es Av. San Carlos 1980, Huancayo.</string>
	<string name="ok_button">Aceptar</string>
	<string name="share_uc">Compartir ubicación</string>
	<string name="fragment_map">Mapa</string>
	<string name="action_calendar">Calendario</string>

	<!-- Preference Titles -->
	<string name="personalisation_header">Personalización</string>
	<string name="about_header">Acerca de la App</string>

	<string name="menu_info">Información</string>
	<string name="menu_settings">Configuración</string>
	<string name="fragment_settings">Configuración</string>
	<string name="fragment_certificate">Solicitar certificado</string>

	<!-- Info Fragment -->
	<string name="strInversion">Inversión</string>
	<string name="info_certificado">Si deseas obtener el certificado como asistente, deberás realizar el pago</string>
	<string name="monto_certificado">S/ 30.00</string>
	<string name="info_cet_recuerda">"Recuerda que tienes que registrar tu participación en las ponencias que participarás. Asimismo, deberás asistir a más 50% de las ponencias para obtener la certificación como asistente."</string>
	<string name="info_opc1"><![CDATA[Si eres estudiante o público en general puedes realizar el pago 24 horas después que te inscribas indicando tu DNI en: <ul><li>Pago en la ventanilla de los bancos BBVA, BCP, INTERBANK, SCOTIABANK, BANBIF y CAJA CENTRO (solo HUANCAYO).</li><li>Agentes del BBVA, INTERBANK, SCOTIABANK y AGENTES KASNET.</li><li>Pago por BANCA POR INTERNET y aplicativo móvil del BBVA, INTERBANK, SCOTIABANK, BCP Y BANBIF.</li></ul>]]></string>
	<string name="info_opc2"><![CDATA[Solo para estudiantes UC: <ul><li>Pagos online con cualquier tarjeta sean están de crédito y débito por medio del link:</li>\nhttps://estudiantes.ucontinental.edu.pe/oficinas/tesoreria-creditos-y-cobranzas/instructivo-de-pagos/]]></string>
	<string name="moreInfo">Más información</string>
	<string name="info_email">Poleth: email: pbegazo@continental.edu.pe</string>

	<string name="ponente">PONENTE</string>

	<string name="desc">El concepto de informática es muy amplio y ha evolucionado mucho y rápidamente a lo largo del tiempo. Este cambio ha afectado a todos los ámbitos de la sociedad y a nuestra forma de vivir. Enviar un whatsapp, hablarle a nuestro iPhone, hacer compras online, leer en un e-book o ver un vídeo en Youtube son cosas habituales y resulta extraño no repetirlas cada día.\nEn la actualidad no sólo hablamos de informática, sino de Tecnologías de la Información y la Comunicación (TIC), ya que los cambios tecnológicos afectan a todos los ámbitos de nuestra vida.</string>
	<string name="academic_info">Investigadora de Doctorado en Ciencias y Magíster de Ciencias en Urbanismo y Planeamiento Estratégico (Ku Leuven, Bélgica). Investigadora Asociada del Centro de Competencias del Agua (Ayacucho, Perú).</string>
	<string name="action_map">Mapa</string>
	<string name="linkedin">LinkedIn</string>
	<string name="twitter">Twitter</string>

	<string name="lecture_title_tools">Investigación e innovación para posicionar a la madera como un material del futuro sostenible en la industria de la Construcción</string>
	<string name="developer">Desarrolladores</string>
	<string name="version">Versión</string>
	<string name="app_theme_title">Tema de la aplicación</string>

	<string name="light_theme">Claro</string>
	<string name="dark_theme">Oscuro</string>
	<string name="os_theme">Predeterminado del Sistema</string>
	<string name="devs"><![CDATA[ &#8226; Max Díaz Romaní<br /> &#8226; Samuel Bellido Contreras<br /> &#8226; Nayif Sotacuro Matos<br /> &#8226; Diomedes Valdivia Picón<br /> &#8226; Jeferson Unchupaico Huaringa<br /> ]]></string>
	<string name="agenda">Agenda</string>
	<string name="feedback">Calificar ponencia</string>
	<string name="comment_title">¿Cómo califica la ponencia?</string>
	<string name="send">Enviar</string>
	<string name="placeholder">Escribe tu comentario</string>
	<string name="cancel">Cancelar</string>
	<string name="email_message">Hola, este es un mensaje de verificacion de su inscripcion al congreso, este es el link para el ingreso a la ponencia: %s.</string>
	<string name="download_files_message">En un instante se empezarán a descargar los archivos…</string>
	<string name="logout_message">Se cerró la sesión.</string>
	<string name="error_login_message">Error al autenticar inicio de sesión con Google.</string>
	<string name="error_auth">Error al autenticar.</string>
	<string name="phone_verification">Verificaremos su número celular y le enviaremos el medio por el cual asistirá a su ponencia elegida.</string>
	<string name="sms_verification">Ingrese el código enviado a su celular en los espacios en blanco.</string>
	<string name="send_msg">Enviar mensaje</string>
	<string name="verify_sms_token">Verificar código SMS</string>
	<string name="enter_phone_number">Ingresa tu número de celular</string>
	<string name="peru_phone_code">+51</string>
	<string name="phone_number_example">999999999</string>
	<string name="verify_btn">Verificar</string>
	<string name="digital_certificate">Certificado digital</string>
	<string name="action_download">Descargar materiales</string>
	<string name="action_pdf_viewer">Recursos de la ponencia</string>
	<string name="enter_token">Código de 4 dígitos</string>
	<string name="verification_token_message">Ingrese el código de verificación de 4 dígitos para enviarle el enlace de la ponencia.</string>
	<string name="description">Bienvenido a la aplicación AppCongreso, desarrollada exclusivamente para el IV Congreso de Ingeniería 2021.</string>
	<string name="features"><![CDATA[ La app te permitirá:<br /> &#8226; Autenticarte para acceder a los beneficios de usuarios registrados.<br /> &#8226; Conocer los detalles para la inscripción en el IV Congreso de Ingeniería.<br /> &#8226; Visualizar información de ponencias y ponentes.<br /> &#8226; Guardar recordatorios en el calendario de las ponencias que te interesen.<br />  &#8226; Descargar de materiales y certificados de participación.<br />]]></string>
	<string name="lecture_capacity">Cupos disponibles: %d</string>

	<string name="title_tutorial_btn_login">Iniciar sesión</string>
	<string name="tutorial_btn_login">Has clic para iniciar sesión en tu cuenta de Google.</string>
	<string name="title_tutorial_btn_calendar">Calendario</string>
	<string name="title_tutorial_btn_enroll">Acceder</string>
	<string name="title_tutorial_btn_resources">Recursos</string>
	<string name="tutorial_btn_calendar">Has clic aquí para guardar la ponencia en tu calendario de Google.</string>
	<string name="tutorial_btn_enroll">Has clic aquí para acceder a la ponencia.</string>
	<string name="tutorial_btn_resources">Has clic aquí para descargar los recursos de una ponencia.</string>
	<string name="tos_privacy">Condiciones y Privacidad</string>
	<string name="logo_uc">Footer</string>
	<string name="settings_time_zone">Eventos en zona horaria del Pacífico (UTC-5)</string>
	<string name="banner">Banner Congreso</string>
	<string name="link_room">https://bit.ly/3qyXchm</string>
	<string name="link_first_room">https://bit.ly/3DbbVlW</string>
	<string name="link_second_room">https://bit.ly/3qyXchm</string>
	<string name="key_first_room">404018</string>
	<string name="key_second_room">208313</string>
	<string name="no_internet_msg">Parece que no tienes conexión a Internet para poder iniciar sesión.</string>
	<string name="moderador">MODERADOR(ES)</string>
	<string name="action_download_pdf">Descargar pdf</string>
	<string name="title_tutorial_btn_feedback">Feedback</string>
	<string name="tutorial_btn_feedback">Has clic aquí para enviar tus comentarios sobre la ponencia.</string>
	<string name="title_tutorial_speaker">Ponente</string>
	<string name="tutorial_speaker_photo">Has clic aquí para ver los detalles del ponente.</string>
	<string name="email_subject">IV Congreso Ingeniería 2021</string>
</resources>