<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

	<PreferenceCategory app:title="@string/personalisation_header">

		<ListPreference
			app:defaultValue="-1"
			app:entries="@array/theme_entries"
			app:entryValues="@array/theme_values"
			app:key="app_theme"
			app:title="@string/app_theme_title"
			app:dialogTitle="@string/app_theme_title"
			app:summary="%s"
			app:icon="@drawable/ic_app_theme"/>
	</PreferenceCategory>

	<PreferenceCategory app:title="@string/about_header">

		<org.grupotres.appcongreso.ui.settings.ColourizedTextPreference
			app:key="tos_privacy"
			app:title="@string/tos_privacy"
			app:icon="@drawable/ic_tos_privacy"/>

		<Preference
			app:key="version"
			app:title="@string/version"
			app:summary="1.0.0"
			app:icon="@drawable/ic_info"/>

	</PreferenceCategory>
</androidx.preference.PreferenceScreen>