<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:showIn="navigation_view">

	<group android:checkableBehavior="single">
		<item
			android:id="@+id/nav_home"
			android:icon="@drawable/ic_home"
			android:title="@string/menu_main_page" />

		<item
			android:id="@+id/nav_lecture_list"
			android:icon="@drawable/ic_event"
			android:title="@string/menu_event" />

		<item
			android:id="@+id/nav_signature_panel"
			android:icon="@drawable/ic_sign"
			android:title="@string/digital_signature"
			android:visible="false"/>

		<item
			android:id="@+id/nav_info"
			android:icon="@drawable/ic_info"
			android:title="@string/menu_info"/>

		<item
			android:id="@+id/nav_settings"
			android:icon="@drawable/ic_settings"
			android:title="@string/menu_settings"/>
	</group>
</menu>