<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:scrollbars="none"
	tools:context=".ui.onboarding.WelcomeFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/app_logo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="30dp"
			android:padding="10dp"
			android:contentDescription="@string/logo_desc"
			android:scaleType="centerInside"
			app:srcCompat="@mipmap/logo_app"/>

		<TextView
			android:id="@+id/app_desc"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:gravity="center"
			android:padding="10dp"
			android:text="@string/description"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"	/>

		<com.google.android.material.divider.MaterialDivider
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:dividerColor="?attr/colorPrimary"
			app:dividerInsetStart="16dp"
			app:dividerInsetEnd="16dp"/>

		<TextView
			android:id="@+id/info_app"
			style="@style/TextAppearance.MaterialComponents.Body1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:padding="10dp"
			android:gravity="center"
			android:text="@string/event_info"/>
	</LinearLayout>
</ScrollView>
