<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/dracula"
	tools:context=".ui.home.HomeFragment">
	<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/dracula"
	tools:context=".ui.info.InfoFragment">
		<TextView
			android:id="@+id/strInversion"
			style="@style/TextAppearance.MaterialComponents.Headline4"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginTop="11dp"
			android:layout_marginEnd="20dp"
			android:text="@string/strInversion"
			android:textColor="@color/white"
			android:textStyle="bold"
			android:gravity="center"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			tools:ignore="MissingConstraints" />
		<View
			android:id="@+id/divider3"
			android:layout_width="0dp"
			android:layout_height="3dp"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:background="@drawable/list_divider"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/strInversion" />
		<TextView
			android:id="@+id/info_certificado"
			style="@style/TextAppearance.MaterialComponents.Headline6"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:padding="10dp"
			android:gravity="center"
			android:text="@string/info_certificado"
			android:textColor="@color/white"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/strInversion" />

		<FrameLayout
			android:id="@+id/info"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:padding="10dp"
			android:background="@color/primaryLightColor"
			app:layout_constraintBottom_toTopOf="@id/info_cet_recuerda"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/info_certificado">

			<TextView
				android:id="@+id/monto_certificado"
				style="@style/TextAppearance.MaterialComponents.Headline3"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="20dp"
				android:layout_marginEnd="20dp"
				android:padding="10dp"
				android:gravity="center"
				android:text="@string/monto_certificado"
				android:textColor="@color/white"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/info_certificado" />

		</FrameLayout>

		<TextView
			android:id="@+id/info_cet_recuerda"
			android:textSize="16sp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:padding="10dp"
			android:gravity="center"
			android:text="@string/info_cet_recuerda"
			android:textColor="@color/white"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/info" />
		<View
			android:id="@+id/divider4"
			android:layout_width="0dp"
			android:layout_height="3dp"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:background="@drawable/list_divider"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/info_cet_recuerda" />
		<TextView
			android:id="@+id/info_opc1"
			android:textSize="14sp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:padding="10dp"
			android:ellipsize="end"
			android:text="@string/info_opc1"
			android:textColor="@color/white"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/info_cet_recuerda" />
		<TextView
			android:id="@+id/info_opc2"
			android:textSize="14sp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:padding="10dp"
			android:ellipsize="end"
			android:text="@string/info_opc2"
			android:textColor="@color/white"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/info_opc1" />
		<View
			android:id="@+id/divider5"
			android:layout_width="0dp"
			android:layout_height="3dp"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:background="@drawable/list_divider"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/info_opc2" />
		<TextView
			android:id="@+id/moreInfo"
			style="@style/TextAppearance.MaterialComponents.Headline6"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginTop="11dp"
			android:layout_marginEnd="20dp"
			android:text="@string/moreInfo"
			android:textColor="@color/white"
			android:textStyle="bold"
			android:gravity="center"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/divider5" />
		<TextView
			android:id="@+id/info_more_info"
			android:textSize="14sp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:padding="10dp"
			android:ellipsize="end"
			android:text="@string/info_opc2"
			android:textColor="@color/white"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/moreInfo" />
		<TextView
			android:id="@+id/info_email"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:padding="3dp"
			android:drawablePadding="10dp"
			android:text="@string/info_email"
			android:textColor="@color/white"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/info_more_info"
			app:drawableStartCompat="@drawable/ic_select_option" />
		<TextView
			android:id="@+id/info_tel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:padding="3dp"
			android:drawablePadding="10dp"
			android:text="@string/info_tel"
			android:textColor="@color/white"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/info_email"
			app:drawableStartCompat="@drawable/ic_select_option" />
		<TextView
			android:id="@+id/info_cel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:padding="3dp"
			android:drawablePadding="10dp"
			android:text="@string/info_cel"
			android:textColor="@color/white"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/info_tel"
			app:drawableStartCompat="@drawable/ic_select_option" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>