<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="10dp">

		<TextView
			android:id="@+id/lecture_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="20dp"
			android:ellipsize="end"
			android:maxLines="5"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
			android:textStyle="bold|italic"
			tools:text="La informática en el desarrollo minero en el Perú en el siglo 21" />

		<TextView
			android:id="@+id/lecture_date"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="20dp"
			android:gravity="center"
			android:drawablePadding="5dp"
			android:maxLines="1"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
			android:textStyle="italic"
			app:drawableStartCompat="@drawable/ic_save_spot"
			tools:text="9:00 a.m. - 10:00 a.m." />

		<TextView
			android:id="@+id/speaker"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="20dp"
			android:text="@string/speaker"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
			android:textStyle="bold"/>

		<TextView
			android:id="@+id/speaker_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="5dp"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
			tools:text="Doraliz León Rojas (Perú)"/>

		<TextView
			android:id="@+id/speaker_company"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="20dp"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
			tools:text="Universidad Continental"/>

		<TextView
			android:id="@+id/moderador"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="20dp"
			android:text="@string/moderador"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
			android:textStyle="bold"/>

		<TextView
			android:id="@+id/moderador_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="5dp"
			android:layout_marginBottom="20dp"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
			tools:text="Doraliz León Rojas"/>

		<TextView
			android:id="@+id/resources"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="5dp"
			android:gravity="center"
			android:padding="3dp"
			android:maxLines="1"
			android:drawablePadding="5dp"
			android:text="@string/download_resources"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
			app:drawableStartCompat="@drawable/ic_pdf"/>

		<TextView
			android:id="@+id/feedback"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:gravity="center"
			android:padding="3dp"
			android:maxLines="1"
			android:drawablePadding="5dp"
			android:text="@string/feedback"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
			android:textColor="?attr/colourizedTextPreferenceColor"
			app:drawableStartCompat="@drawable/ic_feedback"/>
	</LinearLayout>
</ScrollView>